# Topdown-RaspGame

./: CMakeLists.txt  RebuildSln.sh  authors.txt  imgui.ini  output.txt
engine/: config.h
engine/core/: MatrixMath.h  VectorMath.h
engine/render/: CMakeLists.txt  Camera.cpp  Camera.h  DebugFragShader.glsl  DebugVertexShader.glsl  FragGLTFShader.glsl  FragShader.glsl  GraphicsNode.cpp  GraphicsNode.h  Lighting.cpp  Lighting.h  MESHRESOURCE.h  MeshResource.cpp  ShaderResource.cpp  ShaderResource.h  TextureResource.cpp  TextureResource.h  VertGLTFShader.glsl  VertShader.glsl  gltfLoader.cpp  gltfLoader.h  json.hpp  stb_image.h  stb_image1.h  stb_image_write.h  tiny_gltf.h  window.cpp  window.h
exts/: CMakeLists.txt
exts/glew/src/: glew.c  glewinfo.c
exts/glfw/src/: x11_window.c
exts/imgui/: imconfig.h
exts/imgui/backends/: imgui_impl_opengl3.cpp
projects/GLTF_Loader_Project/: CMakeLists.txt
projects/GLTF_Loader_Project/code/: TestApp.cpp  TestApp.h
projects/Math library/: CMakeLists.txt
projects/Math library/code/: Main.cpp
projects/MeshResource/: CMakeLists.txt
projects/MeshResource/code/: CollisionHandler.cc  CollisionHandler.h  Enemy.cpp  Enemy.h  GameObject.cc  GameObject.h  Player.cpp  Player.h  RenderDebug.cpp  RenderDebug.h  TestApp.cpp  TestApp.h  TestObject.cc  TestObject.h  Tile.cc  Tile.h  Tilegrid.cc  Tilegrid.h  UI.cpp  UI.h
projects/SystemPrintProject/: CMakeLists.txt  CopyrightHeader.txt  README.txt  RebuildSln.sh  Task4.sh  main  main.cpp
projects/example/code/: main.cc
textures/GLTFs/: .scene.gltf.kate-swp
(+2 files in other folders)
